fix : fix broken style of product card

--- a/styles.css
+++ b/styles.css
@@ -138,6 +138,7 @@ input[type="submit"] {
 .product p,
 .product .price {
   padding: 1rem;
+  font-size: .9em;
 }
 .product p {
   padding-left: 0.4rem;
@@ -191,4 +192,5 @@ a {
   header {
     flex-direction: column;
   }
+
 }
